Cache node state
Cache node state and provide it as one entity when a client connects to
quickly populate node view.

Deal with more potential HTTP errors in Agent.

Use Redux to handle selected Stack state.

Improve look & feel for Mapping popups (environment/mounts).

Improve look & feel for expanded Service view.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -46,9 +46,9 @@ $label-text-dark: #999;
 
 $updating: #dd4;
 
-$mapping-key: #38755d;
-$mapping-syntax: #ddd;
-$mapping-value: #999;
+$mapping-key: #e3df4177;
+$mapping-syntax: #5194e977;
+$mapping-value: #cccccc88;
 
 $window-height: 100%;
 
