Add menu to select chart time period
Allow user to select time period for chart from a list of options:

  * 1 hour [default]
  * 1 day
  * 1 week

Misc. UI polishing.

Refactor event system for chart data - instead of handling tokens to
trigger events we update the Redux store with the data for any given
chart (i.e. for a given container ID or node hostname). The front end
then just renders whatever data is currently available for that chart.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -31,6 +31,8 @@ $highlight-select: #bf9208d1;
 $highlight-select-background: rgba(240,240,102,0.1);
 $highlight-select-accent: #375a7e55;
 
+$loader: #ffff00bb;
+
 $outline: #555;
 $outline-dark: #333;
 $outline-background: #32322f55;
