--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -10,14 +10,7 @@
 .chart-wrapper {
   z-index: 9999999999;
   width: 62em;
-  min-height: 38em;
-}
-
-.chart-wrapper .loading {
-  height: 100%;
-  font-size: 1em;
-  font-style: oblique;
-  text-align: center;
+  min-height: 40em;
 }
 
 .chart-wrapper.ready:hover {
@@ -25,11 +18,91 @@
 }
 
 .chart {
+  padding-top: 2em;
+  height: 30em;
   padding: 1em;
+}
+
+.chart .header {
+  padding-bottom: 2em;
 }
 
 .chart .no-data {
   color: $label-text-dark;
   text-align: center;
   font-style: oblique;
+}
+
+.chart-view .title {
+  color: $label-text-dark;
+  margin-right: 0.4em;
+}
+
+.custom-select {
+  width: 7em;
+}
+
+.chart {
+  .loader {
+    height: 30em;
+  }
+
+  // https://projects.lukehaas.me/css-loaders/
+  .loader,
+  .loader:before,
+  .loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out;
+  }
+  .loader {
+    color: $loader;
+    font-size: 10px;
+    margin: 80px auto;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+  .loader:before,
+  .loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+  }
+  .loader:before {
+    left: -3.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+  .loader:after {
+    left: 3.5em;
+  }
+  @-webkit-keyframes load7 {
+    0%,
+    80%,
+    100% {
+      box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+      box-shadow: 0 2.5em 0 0;
+    }
+  }
+  @keyframes load7 {
+    0%,
+    80%,
+    100% {
+      box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+      box-shadow: 0 2.5em 0 0;
+    }
+  }
 }
