Ensure tooltips appear above Overview modal.
Fix spacing and scrolling inside chart modal.

Move chart period selector to header to conserve space for chart.

Fix chart container size/remove scrolling.

Allow clicking the masked background to hide Overview when visible.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -67,6 +67,8 @@ html {
 }
 
 .tooltip {
+  position: fixed;
+  z-index: 999999999999999999999999999999999999;
   max-width: 500px;
 
   .tooltip-inner {
