--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -10,7 +10,7 @@
 .chart-wrapper {
   z-index: 9999999999;
   width: 62em;
-  min-height: 40em;
+  min-height: 35em;
 }
 
 .chart-wrapper.ready:hover {
@@ -38,13 +38,18 @@
   margin-right: 0.4em;
 }
 
-.custom-select {
+.chart .period-menu {
+  position: absolute;
+  margin-top: -4em;
+}
+
+.chart .custom-select {
   width: 7em;
 }
 
 .chart {
   .loader {
-    height: 30em;
+    height: 28em;
   }
 
   // https://projects.lukehaas.me/css-loaders/
