Fix default value for chart period when updated
Display correct value when a cart period has been selected.

Fix styling of chart period label in container chart.

--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -33,7 +33,7 @@
   font-style: oblique;
 }
 
-.chart-view .title {
+.chart-view .period-title {
   color: $label-text-dark;
   margin-right: 0.4em;
 }
