diff --git a/README.md b/README.md index 850d5ca..66ed3d0 100644 --- a/README.md +++ b/README.md @@ -1,13 +1,11 @@ -# Skep +![Skep](images/logo.png)
-![logo](images/logo.png)
+![Dashboard](images/screenshots/001-dashboard.png)

 ## Overview

 _Skep_ is a monitoring dashboard for [_Docker Swarm_](https://docs.docker.com/engine/swarm/):

-![Dashboard](images/screenshots/001-dashboard.png)
-
 You may find _Skep_ to be a useful addition to your toolbox along with projects like these:

 * [SwarmProm](https://github.com/stefanprodan/swarmprom)
diff --git a/app/files/css/base.scss b/app/files/css/base.scss
index eaf16dc..f2ed365 100644
--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -1,3 +1,5 @@
+$primary: #51a764;
+
 $overview-sticky-height: 2.4em;
 $overview-height: 8.5em;
 // Using `em` creates weird rounding issues and off-by-one pixel alignment
@@ -9,7 +11,7 @@ $overview-count-select: #ffffff77;

 $transparent: #00000000;

-$port-published: #9d9;
+$port-published: $primary;
 $port-target: #999;

 $mount-button: #824747;
diff --git a/app/files/css/service.scss b/app/files/css/service.scss
index 12f000d..fe41e85 100644
--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -51,8 +51,8 @@ a.service-name:hover, a.image:hover {

 .service .mode-icon {
   color: $label-text-dark;
-  width: 18px;
-  height: 18px;
+  width: 1em;
+  height: 1em;
   margin-right: 0.4em;
   margin-left: 0.4em;
   opacity: 1;
@@ -204,8 +204,6 @@ tr.service.networked {
   .service-badges {
     font-size: 1.2em;
     display: inline;
-    // Align outside of padding to keep alignment matched to collapsed stacks.
-    margin-left: -0.4em;

     .badge {
       padding: 0.25em;
@@ -229,8 +227,7 @@ tr.service.networked {
   .tasks {
     // Allow for port mappings
     margin-right: 10.2em;
-    // Aligning with count badge
-    margin-left: -1.4em;
+    margin-top: 0.4em;
   }
 }

diff --git a/app/files/css/stack.scss b/app/files/css/stack.scss
index ad46b71..33cf714 100

--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -227,8 +227,10 @@ tr.service.networked {
   }
 
   .tasks {
-    // Allow for environment/mount buttons and port mappings
-    margin-right: 12.2em;
+    // Allow for port mappings
+    margin-right: 10.2em;
+    // Aligning with count badge
+    margin-left: -1.4em;
   }
 }
 
