Improve networked service icon and tooltip
When a service is selected, improve the icon and tooltip for services
that share a network with the selected service. Include information
about the shared networks (count and names/IDs).

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -80,11 +80,18 @@ html {
     em {
       color: $label-text-dark !important;
     }
+
+    .nowrap {
+      white-space: nowrap;
+    }
+
+    .align-left {
+      text-align: left;
+    }
   }
 }
 
 .info-tooltip {
-  text-align: left;
   width: auto;
   white-space: nowrap;
 }
