Highlight related services/tasks when selecting a node
Clicking on a node now highlights any services that have tasks running
on that node, and any tasks (in expanded stack view) running on that
node.

Fix possible memory leak in current/previous node state retention.

Fix issue with flickering tooltips.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -31,6 +31,7 @@ $status-light-healthy: #bf9208d1;
 
 $highlight-select: #bf9208d1;
 $highlight-select-background: rgba(240,240,102,0.1);
+$highlight-select-background-secondary: rgba(240,240,102,0.05);
 $highlight-select-accent: #375a7e55;
 
 $loader: #ffff00bb;
@@ -70,6 +71,7 @@ html {
 
 .tooltip {
   position: fixed;
+  pointer-events: none; // https://stackoverflow.com/a/48665379
   z-index: 999999999999999999999999999999999999;
   max-width: 500px;
 
