--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -54,6 +54,7 @@
 }
 
 .minimized .node {
+  cursor: pointer;
   margin-bottom: 1.2em 0;
   height: 4.4em;
 }
@@ -86,8 +87,13 @@
   font-size: 0.9em;
 }
 
-.node.highlight {
+.node.highlighted {
   box-shadow: 0px 0px 3px $highlight-select;
+}
+
+.node.selected {
+  box-shadow: 0px 0px 3px $highlight-select;
+  background-color: $highlight-select-background;
 }
 
 .node h2 {
