--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -178,6 +178,10 @@ tr.service.selected {
   background-color: $highlight-select-background;
 }
 
+tr.service.highlighted {
+  background-color: $highlight-select-background-secondary;
+}
+
 tr.service.networked {
   background-color: rgba(45,80,180,0.2);
 }
