WIP: Include loading/erroring containers in tasks
Display error message when available. Include containers in all states
so we can see problematic tasks more easily.

--- a/app/files/css/task.scss
+++ b/app/files/css/task.scss
@@ -6,6 +6,9 @@
   text-align: center;
   display: block;
   margin: 0.4em 0;
+  text-overflow: ellipsis;
+  width: 10em;
+  overflow-x: hidden;
 }
 
 .task .badges {
