Hide scrollbar on nodes view
Looks horrible on Windows.

--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -4,6 +4,12 @@
   width: 21em;
   padding: 1em;
   overflow-y: scroll;
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
+
+#nodes::-webkit-scrollbar {
+  width: 0 !important;
 }
 
 .node {
