--- a/app/files/css/overview.scss
+++ b/app/files/css/overview.scss
@@ -15,8 +15,9 @@
   width: 100%;
   z-index: 999999999999999;
   border-bottom: 1px solid $outline-dark;
-  padding-top: 0.2em;
+  padding-top: 0.4em;
   visibility: visible;
+  transition: background-color 0.3s ease;
 
   &.visible {
     visibility: visible;
@@ -28,6 +29,34 @@
     margin-right: 1em;
     color: $url-hover-color;
     opacity: 0.8;
+  }
+
+  .ping-icon {
+    float: right;
+    transition: opacity 0.5s ease;
+    opacity: 0.1;
+    color: $green;
+    margin-right: 0.8em;
+  }
+
+  &.ping {
+    .ping-icon {
+      opacity: 0.5;
+    }
+  }
+
+  &.connected {
+    .connection-error {
+      display: none;
+    }
+  }
+
+  &.disconnected {
+    text-align: center;
+    background-color: #ce4a4a59;
+    .connection-error {
+      display: block;
+    }
   }
 }
 
@@ -63,6 +92,12 @@
     display: inline-block;
     float: left;
     height: $overview-height;
+    opacity: 0.3;
+    background-color: $light;
+  }
+
+  &.bounce-logo .spacer {
+    opacity: 0;
   }
 
   .headers {
@@ -149,13 +184,14 @@
     h3 {
       font-size: 1em;
       color: $label-text;
-      margin-bottom: 0;
+      margin-bottom: 0.4em;
     }
 
     display: table;
     padding-left: 1em;
     margin-top: -1em;
     height: $overview-height;
+    line-height: 1.3em;
 
     .row-chunk {
       display: inline;
