--- a/app/files/css/node_stats.scss
+++ b/app/files/css/node_stats.scss
@@ -82,3 +82,18 @@
   width: 1.3em;
   height: 1.3em;
 }
+
+
+.node-stats-tooltip {
+  text-align: left;
+
+  h4 {
+    font-size: 1em;
+    font-weight: bold;
+    margin-bottom: 0.4em;
+    text-align: center;
+  }
+
+  .node-stats-tooltip-row {
+  }
+}
