Fix scrolling issue in maximized nodes view
The modal background for overview was appearing in a strange place and
causing unwanted scrolling so setting body to never scroll vertically as
this should never be needed.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -79,6 +79,8 @@ $window-height: 100%;
 
 body {
   height: 100%;
+  // Scrolling only occurs within the node and stack views
+  overflow-y: hidden;
 }
 
 html {
