--- a/app/files/css/overview.scss
+++ b/app/files/css/overview.scss
@@ -89,7 +89,7 @@
   border-bottom: 3px solid $outline-dark;
   background-image: url('../images/logo.svg');
   background-repeat: no-repeat;
-  background-size: auto $overview-height - 1em;;
+  background-size: auto $overview-height - 1em;
   background-position: 1.2em 0.1em;
   min-height: $overview-height;
   max-height: $overview-height;
