Provide progress information on service updates
When a service is updating, indicate which tasks are pending and which
have been updated in expanded view. In collapsed view, use the row
background as a progress bar indicating what percentage of tasks have
been updated.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -47,6 +47,18 @@ $background-color-translucent: rgba(34, 34, 34, 0.9);
 $background-color-highlight: #292929;
 $background-color-updating: #7b613a94;
 
+$background-color-updating-percent-0: #51a76420;
+$background-color-updating-percent-10: #51a76428;
+$background-color-updating-percent-20: #51a76430;
+$background-color-updating-percent-30: #51a76438;
+$background-color-updating-percent-40: #51a76440;
+$background-color-updating-percent-50: #51a76448;
+$background-color-updating-percent-60: #51a76450;
+$background-color-updating-percent-70: #51a76458;
+$background-color-updating-percent-80: #51a76460;
+$background-color-updating-percent-90: #51a76468;
+$background-color-updating-percent-100: #51a76470;
+
 $status-light-healthy: #bf9208d1;
 
 $highlight-select: #bf9208d1;
