--- a/app/files/css/animations.scss
+++ b/app/files/css/animations.scss
@@ -30,3 +30,69 @@
     box-shadow: 0 0 0 3em rgba($warning, 0);
   }
 }
+
+@keyframes pulse-percent-0 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-0; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-10 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-10; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-20 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-20; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-30 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-30; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-40 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-40; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-50 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-50; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-60 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-60; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-70 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-70; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-80 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-80; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-90 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-90; }
+  100% { background-color: $background-color-translucent; }
+}
+
+@keyframes pulse-percent-100 {
+  0% { background-color: $background-color-translucent; }
+  50% { background-color: $background-color-updating-percent-100; }
+  100% { background-color: $background-color-translucent; }
+}
