Add some space to bottom of section content
The bottom-most stack, when expanded, left containers meeting the bottom
margin exactly. This gives the scroll area some extra padding.

--- a/app/files/css/dashboard.scss
+++ b/app/files/css/dashboard.scss
@@ -3,6 +3,10 @@
   position: absolute;
   top: 0;
   margin-top: $overview-sticky-height;
+
+  .section-content {
+    margin-bottom: 3em;
+  }
 }
 
 h2.section-title {
