--- a/app/files/css/task.scss
+++ b/app/files/css/task.scss
@@ -4,16 +4,25 @@
 }
 
 .task.out-of-sync {
-  background-color: rgba($warning, 0.2);
   .box {
     border-color: rgba($warning, 0.5);
+    background-color: rgba($warning, 0.1);
   }
 }
 
 .task.synced {
-  background-color: rgba($success, 0.2);
   .box {
+    background-color: rgba($success, 0.1);
     border-color: rgba($success, 0.5);
+    animation: pulse-success 1.5s ease 1;
+  }
+}
+
+.task.error {
+  .box {
+    border-color: rgba($danger, 0.5);
+    background-color: rgba($danger, 0.1);
+    animation: pulse-error 1.5s ease 1;
   }
 }
 
