--- a/app/files/css/tooltip.scss
+++ b/app/files/css/tooltip.scss
@@ -2,11 +2,11 @@
   position: fixed;
   pointer-events: none; // https://stackoverflow.com/a/48665379
   z-index: 999999999999999999999999999999999999;
-  max-width: 500px;
+  width: auto;
+  max-width: 1000px;
 
   .tooltip-inner {
-    max-width: 500px;
-    text-overflow: ellipsis;
+    max-width: 1000px;
     color: $label-text-light;
 
     em {
@@ -26,7 +26,6 @@
 .info-tooltip {
   width: auto;
   white-space: nowrap;
-}
 
   .errors {
     padding-left: 0.2em;
@@ -40,3 +39,4 @@
       padding-left: 0.2em;
     }
   }
+}
