Allow node warnings to repeat but slow down animation
Provide an alternative `pulse-<STATE>-loop` animation for each state
(error, warning, success) for node icon which only animates for 20% of
the animation, leaving 80% blank. This means we can use a 5s loop to get
the same 1s animation and 4s of nothing. This is much less intrusive in
the UI.

--- a/app/files/css/animations.scss
+++ b/app/files/css/animations.scss
@@ -31,6 +31,15 @@
   }
 }
 
+@keyframes pulse-error-loop {
+  0% {
+    box-shadow: 0 0 0 0px rgba($danger, 0.4);
+  }
+  20% {
+    box-shadow: 0 0 0 3em rgba($danger, 0);
+  }
+}
+
 @keyframes pulse-warning {
   0% {
     box-shadow: 0 0 0 0px rgba($warning, 0.4);
@@ -40,11 +49,29 @@
   }
 }
 
+@keyframes pulse-warning-loop {
+  0% {
+    box-shadow: 0 0 0 0px rgba($warning, 0.4);
+  }
+  20% {
+    box-shadow: 0 0 0 3em rgba($warning, 0);
+  }
+}
+
 @keyframes pulse-success {
   0% {
     box-shadow: 0 0 0 0px rgba($success, 0.4);
   }
   100% {
+    box-shadow: 0 0 0 3em rgba($success, 0);
+  }
+}
+
+@keyframes pulse-success-loop {
+  0% {
+    box-shadow: 0 0 0 0px rgba($success, 0.4);
+  }
+  20% {
     box-shadow: 0 0 0 3em rgba($success, 0);
   }
 }
