--- a/app/files/css/task.scss
+++ b/app/files/css/task.scss
@@ -1,6 +1,9 @@
 .task {
   width: 12em;
   border-radius: 12.5%;
+  .box {
+    transition: background-color 3s ease, border-color 3s ease;
+  }
 }
 
 .task.out-of-sync {
