Further improve chart logging and error handling
Provide an error in the front end if a chart request fails.

Provide full details of error response if chart request fails.

Tweak base background colour to improve contrast.

Improve accuracy of service error message - show time since last error,
not fixed `60 seconds`.

--- a/app/files/css/modal.scss
+++ b/app/files/css/modal.scss
@@ -30,6 +30,13 @@
     border-bottom: 1px solid $outline-dark;
     margin-bottom: 1em;
   }
+
+  .error {
+    font-size: 1.2em;
+    color: $danger;
+    opacity: 0.5;
+    text-align: center;
+  }
 }
 
 .modal-content:hover {
