--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -41,7 +41,7 @@ $modal-background-hover-color: #000000aa;
 
 $url-hover-color: #3798db99;
 $button-background-hover-color: #374f5a33;
-$background-color: #222;
+$background-color: #22222299;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
 $background-color-highlight: #292929;
@@ -93,6 +93,7 @@ body {
   height: 100%;
   // Scrolling only occurs within the node and stack views
   overflow-y: hidden;
+  background-color: #202020;
 }
 
 html {
