Add title to front end app
Replace default title with "Skep".

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Skep</title>
     {% if env == 'production' %}
       <link rel="stylesheet" href="/files/main-{{ css_md5 }}.css"></link>
     {% endif %}
