Improve container stats collection
Use a rolling average for CPU and disk & network I/O container
statistics and calculate on server side so Javascript can display
metrics directly.

Improve Nodes view and include Swap as a separate metric. Enhance
tooltips and general layout to provide more information and more
clearly.

Do not pop up overview on mouse enter - require mouse click instead to
avoid annoying popups.

Allow Stacks view to be collapsed by clicking "Stacks" icon.

Display service aliases in network tooltips.

--- a/app/files/css/dashboard.scss
+++ b/app/files/css/dashboard.scss
@@ -9,12 +9,21 @@
   }
 }
 
+.waiting-data {
+  font-size: 2em;
+  padding: 2em;
+}
+
 h2.section-title {
   text-align: right;
   color: $label-text-dark;
   opacity: 0.1;
   font-size: 1.4em;
   border-bottom: 1px solid $outline-background;
+
+  &.collapsed {
+    color: lighten($label-text-dark, 30%);
+  }
 
   .icon {
     margin: 0 0.2em;
