--- a/app/files/css/node_stats.scss
+++ b/app/files/css/node_stats.scss
@@ -14,12 +14,54 @@
 
 .maximized .node-stats th {
   padding: 0.3em 0.2em;
+  max-width: 6em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: $label-text-dark;
 }
 
 .node {
+  .disks-group {
+    float: right;
+    overflow: hidden;
+    margin-right: 0.3em;
+    min-width: 5em;
+    max-width: 5em;
+  }
+
   .icon.disks {
+    float: left;
     height: 1.2rem;
     width: 1.2rem;
+    margin: 0.1em 0.1em;
+  }
+}
+
+.maximized .node .disks-group {
+  float: none;
+  min-width: 8em;
+  max-width: 8em;
+
+  .icon {
+    width: 1.3rem;
+    height: 1.3rem;
+  }
+}
+
+.filesystem-tooltip {
+  text-align: left;
+  .syntax {
+    color: $accent-dark;
+  }
+
+  em.disk-usage {
+    &.free {
+      color: lighten($accent-dark, 10%);
+    }
+
+    &.total {
+      color: lighten($accent-dark, 20%);
+    }
   }
 }
 
@@ -35,6 +77,10 @@
   font-family: monospace;
 }
 
+.maximized .badges .badge {
+  padding: 0.4em 0.3em;
+}
+
 .disk-stats .badge {
   color: $label-text-light;
 }
@@ -48,8 +94,21 @@
   margin: 0.2em;
 }
 
+.maximized .node-stats .progress-bar {
+  padding: 0.2em;
+}
+
+.minimized .node-stats .meters {
+  display: inline;
+}
+
 .minimized .node-stats .meter.memory {
   margin-left: 0.2em;
+}
+
+.minimized .node-stats .meter.swap {
+  width: 3em;
+  margin-left: 0.1em;
 }
 
 .minimized .node-stats {
@@ -58,18 +117,25 @@
 
 .minimized .node-stats .meter {
   display: inline-block;
-  width: 22%;
+  width: 4.6em;
 }
 
 .minimized .load-averages {
-  display: inline-block;
+  display: block;
+  margin-left: 0.2em;
+}
+
+.load {
+  white-space: nowrap;
+  .badge {
+    width: 30%;
+  }
 }
 
 .minimized .load-averages .badge {
   display: inline-block;
-  width: 3.6em;
+  width: 5em;
 }
-
 
 .minimized .node-stats .progress {
 }
