Misc UI tweaks + summary for collapsed stacks

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -92,6 +92,7 @@ $mapping-value: #cccccc88;
 
 $window-height: 100%;
 
+$monospace: 'Share Tech Mono', monospace;
 body {
   height: 100%;
   // Scrolling only occurs within the node and stack views
