--- a/app/files/css/modal.scss
+++ b/app/files/css/modal.scss
@@ -59,7 +59,7 @@
   text-align: right;
   color: $label-text-dark;
   display: block;
-  font-family: monospace;
+  font-family: $monospace;
   width: 100%;
   margin-top: -1.8em;
   font-style: oblique;
