--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -146,7 +146,7 @@
 
 .node .hostname {
   text-transform: uppercase;
-  font-family: monospace;
+  font-family: $monospace;
 }
 
 .node .chart-button {
