--- a/app/files/css/dashboard.scss
+++ b/app/files/css/dashboard.scss
@@ -9,9 +9,21 @@
   }
 }
 
+button.expand-collapse-stacks {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 1em;
+  margin-right: 0.8em;
+}
+
 .waiting-data {
   font-size: 2em;
   padding: 2em;
+}
+
+#stacks .section-title {
+  margin-right: 2.3em;
 }
 
 h2.section-title {
