--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -13,7 +13,7 @@
   color: $label-text;
   opacity: 0.7;
   text-transform: lowercase;
-  font-family: monospace;
+  font-family: $monospace;
 }
 
 a.service-name:hover, a.image:hover {
@@ -32,11 +32,11 @@ a.service-name:hover, a.image:hover {
 .service span.title {
   font-size: 1em;
   text-transform: lowercase;
-  font-family: monospace;
+  font-family: $monospace;
 }
 
 .service .ports {
-  font-family: monospace;
+  font-family: $monospace;
   margin-left: 1em;
   margin-top: 0.4em;
 }
@@ -78,7 +78,7 @@ a.service-name:hover, a.image:hover {
 
 .service {
   .image-label {
-    font-family: monospace;
+    font-family: $monospace;
     background-color: $background-color-secondary;
     color: $label-text-subheading;
     border-radius: 0.4em;
