--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -92,7 +92,7 @@ $mapping-value: #cccccc88;
 
 $window-height: 100%;
 
-$monospace: 'Share Tech Mono', monospace;
+$monospace: 'Space Mono', monospace;
 body {
   height: 100%;
   // Scrolling only occurs within the node and stack views
